# EDRModel

./: CMakeLists.txt  README.md
include/: distance.h  network.h
src/distance/: distance.c  generate_distance_histogram.c
src/network/: generate_network.c  network.c
